# GBD-Forecasting

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/: modelling_dataset.csv
manuscript/: manuscript.md  supplementary_materials.md
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb
outputs/tables/: adf_stationarity_tests.csv  age_stratified_changes.csv  all_country_projected_changes.csv  all_ensemble_combinations.csv  aus_deaths_projections.csv  aus_divergence_index.csv  aus_projected_changes.csv  bias_analysis.csv  bootstrap_mae_comparisons.csv  covariate_correlations.csv  covid_disruption.csv  cross_validation_results.csv  diebold_mariano_tests.csv  ensemble_combinations.csv  full_model_comparison.csv  granger_causality_tests.csv  leave_one_country_out.csv  ljung_box_tests.csv  loco_chronos.csv  loco_combined.csv  loco_patchtst.csv  model_agreement_2040.csv  multiple_testing_correction.csv  patchtst_hyperparameter_sensitivity.csv  pi_width_2040.csv  residual_normality_tests.csv  sensitivity_split_analysis.csv  sex_stratified_changes.csv  supplementary_forecast_matrix.csv  volatility_accuracy.csv
src/: pipeline.py
src/analyse/: australia_focus.py  comparison.py
src/data/: __init__.py  covariate_loader.py  gbd_loader.py  preprocessor.py
src/models/: arima_baseline.py  prophet_model.py  tft.py  xgboost_ts.py
