[project]
name = "gbd-forecasting"
version = "0.1.0"
description = "GBD disease burden forecasting with temporal fusion transformers"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "torch>=2.2",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "wbgapi>=1.0",
    "requests>=2.31",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "ipywidgets",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
